feat: add `Relation` template
* test: add `Generator` test

--- a/template/schema.ts.tmpl
+++ b/template/schema.ts.tmpl
@@ -18,6 +18,8 @@ export interface Schema {
 // --- Relations ---
 
 export interface Relations {
-	// @TODO
+{{- range $ }}
+	{{ .Name }}: {{ ToPascalCase .Name }}Relations;
+{{- end }}
 }
 {{- end }}
