--- a/template/relations.tmpl
+++ b/template/relations.tmpl
@@ -9,7 +9,7 @@
 // --- Relations ---
 
 export interface Relations {
-{{- range $ }}
+{{- range $.Values }}
 	{{ .Name }}: {{ .RelationsTypeName }};
 {{- end }}
 }
