--- a/internal/testutil/template/tsconfig.json.tmpl
+++ b/internal/testutil/template/tsconfig.json.tmpl
@@ -1,10 +1,25 @@
-{{- block "tsconfig.json" $.TSConfig }}
+{{- block "tsconfig.json" $.TSConfig -}}
+{{- with $ }}{{/* check tsconfig spec is not nil */}}
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
+  "$schema": "https://json.schemastore.org/tsconfig"
+
+{{- with $.CompilerOptions }},
   "compilerOptions": {
-    "strict": true,
-    "noEmit": true
-  },
-  "include": ["**/*.ts"]
+    {{- template "json/mapToAny" . }}
+  }
+{{- end }}
+
+{{- with $.Include }},
+  "include": [
+    {{- template "json/sliceToStringElements" . }}
+  ]
+{{- end }}
+
+{{- with $.Exclude }},
+  "exclude": [
+    {{- template "json/sliceToStringElements" . }}
+  ]
+{{- end }}
 }
+{{- end }}
 {{- end }}
