chore: add `example` generator
* refactor(generator): mkdir with file output

--- a/internal/testutil/node/template/package.json.tmpl
+++ b/internal/testutil/node/template/package.json.tmpl
@@ -1,7 +1,6 @@
 {{- block "package.json" $.PackageJson -}}
 {
-  "name": "{{ $.Name }}",
-  "private": true
+  "name": "{{ $.Name }}"
 
 {{- with $.Version }},
   "version": "{{ . }}"
@@ -9,6 +8,10 @@
 
 {{- with $.Type }},
   "type": "{{ . }}"
+{{- end }}
+
+{{- with $.Private }},
+  "private": {{ . }}
 {{- end }}
 
 {{- with $.Description }},
