feat: add fields override option
This commit adds a feature that allows to override the schema fields type with custom ones.

--- a/template/all.ts.tmpl
+++ b/template/all.ts.tmpl
@@ -1,5 +1,6 @@
 {{- define "all" }}
 {{- template "header/base" }}
+{{ template "import/imports" mergeOverrideImports $ }}
 {{ template "all/collections" $.Collections }}
 {{ template "schema" $.Collections }}
 {{ template "relations" $.Collections }}
