feat: add `Payloads` interface generation

--- a/template/all.ts.tmpl
+++ b/template/all.ts.tmpl
@@ -4,6 +4,7 @@
 {{ template "all/collections" $.Collections }}
 {{ template "schema" $.Collections }}
 {{ template "relations" $.Collections }}
+{{ template "payloads" $.Collections }}
 {{- end }}
 
 
