--- a/template/index.ts.tmpl
+++ b/template/index.ts.tmpl
@@ -12,5 +12,6 @@ export * from {{ printf "./%s" .Name | quote }};
 
 export * from './schema';
 export * from './relations';
+export * from './payloads';
 {{- end }}
 {{- /* "index" END */ -}}
