fix: collection relation mixed slice
A relational (to-many) field can be a slice of the primary key OR object type of the related collection, no mixed values

--- a/template/collection.ts.tmpl
+++ b/template/collection.ts.tmpl
@@ -132,9 +132,9 @@ export interface {{ $.TypeName }} {
 {{- define "collection/relations/field/value" }}
 {{- $typ := printf "%s | %s" $.Collection.PrimaryKey.TypeName $.Collection.TypeName }}
 {{- if $.Many -}}
-    ({{- $typ }})[]
+    {{- $.Collection.PrimaryKey.TypeName }}[] | {{ $.Collection.TypeName }}[]
 {{- else -}}
-    {{- $typ }}
+    {{- $.Collection.PrimaryKey.TypeName }} | {{ $.Collection.TypeName }}
 {{- end }}
 {{- end }}
 {{- /* "collection/relations/field/value" END */ -}}
