feat: add `ImportFileExtension` option
This option allows to set a file extension that will be appended to all the imported paths. It makes the generated code compatible, for example, with `moduleResolution` set to `node16` in `tsconfig.json`

--- a/template/index.ts.tmpl
+++ b/template/index.ts.tmpl
@@ -7,10 +7,10 @@
 
 {{- define "index" }}
 {{- range $.Collections }}
-export * from {{ printf "./%s" .Name | quote }};
+export * from {{ printf "./%s%s" .Name $.ImportFileExtension | quote }};
 {{- end }}
 
-export * from './schema';
-export * from './relations';
+export * from './schema{{ $.ImportFileExtension }}';
+export * from './relations{{ $.ImportFileExtension }}';
 {{- end }}
 {{- /* "index" END */ -}}
