--- a/template/relations.ts.tmpl
+++ b/template/relations.ts.tmpl
@@ -1,6 +1,6 @@
 {{- block "relations.ts" $ -}}
 {{- template "header/base" }}
-{{ template "import/relations" $.Collections }}
+{{ template "import/relations" $ }}
 {{ template "relations" $.Collections }}
 {{- end }}
 {{- /* "relations.ts" END */ -}}
