--- a/template/util.tmpl
+++ b/template/util.tmpl
@@ -35,10 +35,11 @@ import { {{ join .Relations.TypeName .RelatedCollections.TypeName }} } from
 
 
 {{- /* "import/payloads" defines the imports of all the collections payload. */ -}}
-{{- /* It must be executed with a []Collection context. */ -}}
+{{- /* It must be executed with a Graph context. */ -}}
 {{- define "import/payloads" }}
-{{- range $ }}
-import { {{ template "payload/type_name" . }} } from {{ printf "./%s" .Name | quote }};
+{{- range $.Collections }}
+import { {{ template "payload/type_name" . }} } from
+	{{- printf "./%s%s" .Name $.ImportFileExtension | quote }};
 {{- end }}
 {{- end }}
 {{- /* "import/payloads" END */ -}}
